--- a/Dashboard/templates/dashboard.html
+++ b/Dashboard/templates/dashboard.html
@@ -114,8 +114,8 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="{}">Home</a></li>
-                  <li class="nav-item"><a class="nav-link" href="{}">Profile</a></li>
-          <li class="nav-item"><a class="nav-link" href="{}">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="{}">Profile</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ quiz_url }}">Quiz</a></li>
           <li class="nav-item"><a class="nav-link" href="{}">AIPlanner</a></li>
           <li class="nav-item"><a class="nav-link" href="{}">Logout</a></li>
         </ul>
