--- a/Dashboard/templates/dashboard.html
+++ b/Dashboard/templates/dashboard.html
@@ -197,7 +197,7 @@
           <li class="nav-item"><a class="nav-link" href="{}">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="{}">Profile</a></li>
           <li class="nav-item"><a class="nav-link" href="{{ quiz_url }}">Quiz</a></li>
-          <li class="nav-item"><a class="nav-link" href="{}">AIPlanner</a></li>
+          <li class="nav-item"><a class="nav-link"href="{% url 'AIPlanner:process_user_input' %}">AIPlanner</a></li>
           <li class="nav-item"><a class="nav-link" href="{}">Logout</a></li>
         </ul>
       </div>
