--- a/Dashboard/templates/dashboard.html
+++ b/Dashboard/templates/dashboard.html
@@ -197,7 +197,6 @@
   /* Menu Section */
   .menu-container {
     display: flex;
-    {% comment %} background: rgba(255, 255, 255, 0.91); /* Slightly transparent background */ {% endcomment %}
     justify-content: center;  /* Centers the items */
     align-items: center;
     gap: 20px;  /* Adds space between menu items */
@@ -416,7 +415,7 @@
     </a>
 
     <a href="{{ word_match_url }}" class="menu-box">
-      <img src="https://sdmntprwestus.oaiusercontent.com/files/00000000-d93c-5230-8100-9924eea1e0a4/raw?se=2025-03-30T07%3A05%3A21Z&sp=r&sv=2024-08-04&sr=b&scid=d0757088-a697-5796-8e40-5327c68d2acf&skoid=e4438ed3-2a6f-4fd3-bf63-222012dc627c&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-03-30T01%3A19%3A53Z&ske=2025-03-31T01%3A19%3A53Z&sks=b&skv=2024-08-04&sig=/llSiq3v%2ByABYu9KCYfsQY4oE/gLd2IM1OQoadx53oc%3D" alt="Match Word">
+      <img src="{% static 'images/matchwords.png' %}" alt="Match Word">
       <span>Match Word</span>
     </a>
 
