--- a/Dashboard/templates/dashboard.html
+++ b/Dashboard/templates/dashboard.html
@@ -277,11 +277,11 @@
    
   </div> {% endcomment %}
   
-
-  <div class="content container mt-5">
-    <h2>Welcome to ASL Learning</h2>
-    <p>Select your learning level to begin your journey.</p>
+    
+  <div class="container text-center mt-4">
+    <h2 class="mb-3">Select your learning level to begin your journey.</h2>
   </div>
+
 
   {% comment %} <div class="learning-boxes">
     <!-- Beginner Level -->
@@ -403,6 +403,9 @@
   <p>Select an option below to proceed:</p> {% endcomment %}
 
   <!-- Menu Section -->
+  <div class="container text-center mt-4">
+  <h2 class="mb-3">Fun & Learn Zone!</h2>
+</div>
   <div class="menu-container">
     {% comment %} <a href="{% url 'home' %}" class="menu-box">
       <img src="{% static 'images/home_icon.png' %}" alt="Home">
