Authentication and UI update

--- a/gamification/templates/gamification/flashcard-leaderboard.html
+++ b/gamification/templates/gamification/flashcard-leaderboard.html
@@ -44,7 +44,7 @@
     </style>
 </head>
 <body>
-    <h1>Flashcard Leaderboard</h1>
+    <h1>🏆 Flashcard Leaderboard</h1>
     <table>
         <tr>
             <th>Rank</th>
