--- a/gamification/templates/gamification/sign-typing-game-leaderboard.html
+++ b/gamification/templates/gamification/sign-typing-game-leaderboard.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         h2 {
-            color: #4CAF50;
+            color: #007bff;
         }
         table {
             margin: 20px auto;
@@ -26,7 +26,7 @@
             text-align: center;
         }
         th {
-            background-color: #4CAF50;
+            background-color: #007bff;
             color: white;
         }
         tr:nth-child(even) {
@@ -39,7 +39,7 @@
             display: inline-block;
             margin-top: 20px;
             text-decoration: none;
-            color: #4CAF50;
+            color:#007bff;
             font-weight: bold;
         }
         a:hover {
@@ -48,7 +48,7 @@
     </style>
 </head>
 <body>
-    <h2>Sign Typing Game Leaderboard</h2>
+    <h2>🏆 Sign Typing Game Leaderboard</h2>
     <table>
         <thead>
             <tr>
