--- a/speech_to_text/templates/index.html
+++ b/speech_to_text/templates/index.html
@@ -54,7 +54,9 @@
 
     <script>
         function getCSRFToken() {
-            return document.querySelector('meta[name="csrf-token"]').getAttribute('content');
+            return document.cookie.split('; ')
+                .find(row => row.startsWith('csrftoken='))
+                ?.split('=')[1];
         }
 
         function transcribeSpeech() {
